--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '1.1.6.RELEASE'
+        springBootVersion = '1.3.0.RELEASE'
     }
     repositories {
         maven { url "http://repo.spring.io/libs-release" }
@@ -59,7 +59,8 @@ dependencies {
     compile 'commons-io:commons-io:2.4'
 
     compile 'org.apache.httpcomponents:httpclient:4.3.4'
-    compile 'org.apache.httpcomponents:httpcore:4.0.1'
+    //compile 'org.apache.httpcomponents:httpcore:4.0.1'
+    compile 'org.apache.httpcomponents:httpcore:4.4.4'
 
     compile 'com.google.guava:guava:17.0'
     compile 'joda-time:joda-time:2.4'
@@ -71,7 +72,8 @@ dependencies {
     testCompile 'junit:junit'
     testCompile 'org.assertj:assertj-core:1.7.0'
     testCompile 'org.mockito:mockito-core:1.10.8'
-    testCompile 'com.jayway.restassured:rest-assured:2.3.4'
+    //testCompile 'com.jayway.restassured:rest-assured:2.3.4'
+    testCompile 'com.jayway.restassured:rest-assured:2.7.0'
 }
 
 jar {
